Implement random methods

--- a/notebooks/Testing_polynomials.ipynb
+++ b/notebooks/Testing_polynomials.ipynb
@@ -44,13 +44,48 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/nico/documents/math/groebner/groebner/rationals.py:25: RuntimeWarning: Coercing to Rational from float is inherently inexact and will be incorrect for large numerators and denominators. If you need to have certainty the values are correct, you should directly instantiate with Rational(num, den) with integers.\n",
+      "/home/nico/documents/math/groebner/groebner/rationals.py:35: RuntimeWarning: Coercing to Rational from float is inherently inexact and will be incorrect for large numerators and denominators. If you need to have certainty the values are correct, you should directly instantiate with Rational(num, den) with integers.\n",
       "  warn(\n"
      ]
     }
    ],
    "source": [
     "f = 3/4*x**2 + 2*y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also ask for a \"random\" polynomial, optionally setting the degree and bound on the denominator and a bound on the degree (the position wrt the attached ordering)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9/29x^3 + 1/6x^2y + 1/8xy^2 + 1/7y^3 + 26/47y^2z + 5/33yz^2 + 1/18x^2 + 13/21xy + 5/18xz + 1/2y^2 + z^2 + 1/3x"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R.random(deg=20, denominator_bound=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Operations with polynomials\n",
+    "mostly work as you would hope"
    ]
   },
   {
