--- a/notebooks/Testing_rationals.ipynb
+++ b/notebooks/Testing_rationals.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,6 +37,14 @@
      "output_type": "stream",
      "text": [
       "Our numbers are 1/2 and 3/4.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nico/documents/math/groebner/groebner/rationals.py:35: RuntimeWarning: Coercing to Rational from float is inherently inexact and will be incorrect for large numerators and denominators. If you need to have certainty the values are correct, you should directly instantiate with Rational(num, den) with integers.\n",
+      "  warn(\n"
      ]
     }
    ],
@@ -46,6 +54,35 @@
     "s = 3/4*QQ.one()\n",
     "\n",
     "print(f'Our numbers are {r} and {s}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also ask for a \"random\" rational (always between 0 and 1), optionally setting the largest denominator you'd like to see."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "175/359\n",
+      "19/957\n",
+      "229/734\n",
+      "109/269\n",
+      "8/139\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(5):\n",
+    "    print(QQ.random(bound=1000))"
    ]
   },
   {
