--- a/notebooks/Testing_polynomials.ipynb
+++ b/notebooks/Testing_polynomials.ipynb
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "R.random(deg=20, denominator_bound=100)"
+    "R.random(max_deg=20, denominator_bound=100)"
    ]
   },
   {
