--- a/notebooks/multivariate_division_alg.ipynb
+++ b/notebooks/multivariate_division_alg.ipynb
@@ -298,7 +298,7 @@
     {
      "data": {
       "text/plain": [
-       "1/7x^3 + 17/50x^2y + 10/27x^2z + 35/89xyz + 4/7xz^2 + 5/19y^3 + 10/13y^2z + 2/81yz^2 + 1/16z^3 + 11/21x^2 + 19/20xz + 24/43y + 19/63z + 21/62"
+       "47/60x^3 + 38/55x^2y + x^2z + 15/16xy^2 + 21/23xz^2 + 21/44y^3 + 14/33y^2z + 4/15yz^2 + 63/95x^2 + 7/27xy + 12/13yz + 5/8z^2 + 1/3x + 1/2y + 1/5z + 15/43"
       ]
      },
      "execution_count": 21,
@@ -308,6 +308,143 @@
    ],
    "source": [
     "R.random()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R = PolynomialRing(labels=['x','y','z'])\n",
+    "x, y, z = R.get_vars()\n",
+    "\n",
+    "f = R.random(max_deg=20)\n",
+    "g = R.random(max_deg=10)\n",
+    "h = R.random(max_deg=10)\n",
+    "k = R.random(max_deg=10)\n",
+    "\n",
+    "[d1, d2, d3], r = division_algorithm(f, [g, h, k])\n",
+    "\n",
+    "assert f == g*d1 + h*d2 + k*d3 + r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60481/80142xz^2 - 4576599/4403630y^2z - 878721461/860595120yz^2 + 18968/29241z^3 + 29/57xz - 1664767/491568y^2 - 123758642/115258275yz + 7448069/11871846z^2 + 12238/479655y - 1283948/3357585z - 17859/7084"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11/42x^2 + 34/49y^2 + 13/63yz + 1/10y + 23/28"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65/38y - 940/3249z + 140/171"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54/55z + 39/11"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60481/80142xz^2 - 4576599/4403630y^2z - 878721461/860595120yz^2 + 18968/29241z^3 + 29/57xz - 1664767/491568y^2 - 123758642/115258275yz + 7448069/11871846z^2 + 12238/479655y - 1283948/3357585z - 17859/7084"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r"
    ]
   },
   {
