--- a/notebooks/Testing_polynomials.ipynb
+++ b/notebooks/Testing_polynomials.ipynb
@@ -41,6 +41,33 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "x + y"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x + y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next line will throw a warning because it does a coercion from a float to a rational. For small numbers it is safe to ignore, but you should still check that the polynomial you get out is correct. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -54,6 +81,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3/4x^2 + 2y"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -62,22 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9/29x^3 + 1/6x^2y + 1/8xy^2 + 1/7y^3 + 26/47y^2z + 5/33yz^2 + 1/18x^2 + 13/21xy + 5/18xz + 1/2y^2 + z^2 + 1/3x"
+       "1/5x^17y^20z^16 + 3/8x^19y^19z^12 + 53/54x^20y^19z^7 + 2/43x^17y^13z^13 + x^2y^19z^17 + 27/44x^19y^2z^13 + 10/13x^15yz^16 + 5/14x^3y^9z^20 + 44/61x^9z^14 + 1/3x^2y^7z^10"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "R.random(max_deg=20, denominator_bound=100)"
+    "R.random(num_terms=10, max_deg=20, denominator_bound=100)"
    ]
   },
   {
@@ -90,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +146,7 @@
        "3/4x^2z^2 + 2yz^2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +166,7 @@
        "59049/1048576x^20 + 98415/65536x^18y + 295245/16384x^16y^2 + 32805/256x^14y^3 + 76545/128x^12y^4 + 15309/8x^10y^5 + 8505/2x^8y^6 + 6480x^6y^7 + 6480x^4y^8 + 3840x^2y^9 + 1024y^10"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +186,7 @@
        "x^2 - y^2 + 1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +224,7 @@
        "x_2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +244,7 @@
        "-x_0^3 + x_2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +329,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +357,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +377,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +397,7 @@
        "False"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +417,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,59 +445,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# graded lexicographic ordering is the only one I have implemented.\n",
     "o = MonomialOrdering(num_vars=3, labels=['x','y','w'], order_type='grlex')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The 4th monomial is w^2\n",
-      "The 5th monomial is yw\n",
-      "The 6th monomial is y^2\n",
-      "The 7th monomial is xw\n",
-      "The 8th monomial is xy\n",
-      "The 9th monomial is x^2\n",
-      "The 10th monomial is w^3\n",
-      "The 11th monomial is yw^2\n",
-      "The 12th monomial is y^2w\n",
-      "The 13th monomial is y^3\n",
-      "The 14th monomial is xw^2\n",
-      "The 15th monomial is xyw\n",
-      "The 16th monomial is xy^2\n",
-      "The 17th monomial is x^2w\n",
-      "The 18th monomial is x^2y\n",
-      "The 19th monomial is x^3\n",
-      "The 20th monomial is w^4\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(4, 21):\n",
-    "    print(f'The {i}th monomial is {o.idx_to_monomial(i)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# quick check that when we convert back to an index we get the same thing\n",
-    "# if you move the range up much higher be prepared to wait...\n",
-    "for i in range(10000):\n",
-    "    m = o.idx_to_monomial(i)\n",
-    "    assert i == m.to_idx()"
    ]
   },
   {
@@ -462,55 +462,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y^2w\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 12 is the \"index\", or order in which it appears in the list of all monomials\n",
-    "m = o.idx_to_monomial(12)\n",
-    "print(m)"
+    "m = Monomial([12, 32, 1], o)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "[12, 32, 1]"
       ]
      },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m.to_idx()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 2, 1]"
-      ]
-     },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,22 +491,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "45"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "m.total_degree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.order == o"
    ]
   },
   {
@@ -548,16 +538,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "y^4w^2"
+       "x^24y^64w^2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +567,7 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +613,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
