Implement a few different forms of buchberger

--- a/notebooks/Testing_polynomials.ipynb
+++ b/notebooks/Testing_polynomials.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Testing Polynomials\n",
     "We'll start with our imports as well as importing the rationals."
@@ -115,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "1/5x^17y^20z^16 + 3/8x^19y^19z^12 + 53/54x^20y^19z^7 + 2/43x^17y^13z^13 + x^2y^19z^17 + 27/44x^19y^2z^13 + 10/13x^15yz^16 + 5/14x^3y^9z^20 + 44/61x^9z^14 + 1/3x^2y^7z^10"
+       "1/2x^16y^13z^19 + 65/86x^19y^4z^12 + 47/91x^7y^11z^12 + 12/71x^14y^2z^13 + 1/10xy^15z^9 + 4/39x^3y^12z^9 + 76/83x^19yz^2 + 19/24x^18yz + 10/11x^12y^4z^3 + 11/16xy^2z^13"
       ]
      },
      "execution_count": 6,
